functions allow new buttons to be added, however bug won't allow gifs to be displayed

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <form id="ocean-form">
             <label for="ocean-input">Add Ocean Topics</label>
-            <input type="text" id="coean-input">
+            <input type="text" id="ocean-input">
             <br>
 
             <input id="add-ocean" type="submit" value="Add Ocean Topics">
