README update, comments deleted, and pseudo code

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
     <div class="container">
-        <h1>Search the seas</h1>
+        <h1>Search the Seas</h1>
 
         <form id="ocean-form">
             <label for="ocean-input">Add Ocean Topics</label>
